refactor: use primitive wrapper `valueof` method
Co-authored-by: Moderne <team@moderne.io>