@@ -89,7 +89,7 @@ public class StepParserTests {
 		TaskletStep bean = (TaskletStep) factory.getObject();
 		assertEquals("wrong start-limit:", 25, bean.getStartLimit());
 		Object throttleLimit = ReflectionTestUtils.getField(factory, "throttleLimit");
-		assertEquals(new Integer(10), throttleLimit);
+		assertEquals(Integer.valueOf(10), throttleLimit);
 	}
 
 	@Test
