@@ -218,7 +218,7 @@ public abstract class AbstractExecutionContextDaoTests extends AbstractTransacti
 	public void testStoreInteger() {
 
 		ExecutionContext ec = new ExecutionContext();
-		ec.put("intValue", new Integer(343232));
+		ec.put("intValue", Integer.valueOf(343232));
 		stepExecution.setExecutionContext(ec);
 		contextDao.saveExecutionContext(stepExecution);
 		ExecutionContext restoredEc = contextDao.getExecutionContext(stepExecution);
